--- a/css/styles.css
+++ b/css/styles.css
@@ -13,5 +13,11 @@ h1{
 }
 
 h3{
+
   color: #3F72AF;
+}
+/*******************************CLASS SELECTOR******************************/
+
+.profile{
+  border-radius: 40%;
 }
